--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ontouchmove>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,7 +26,7 @@
 
     <title>nhapeman.com_v3</title>
   </head>
-  <body>
+  <body tabIndex=0>
     <noscript>
       <strong>We're sorry but nhapeman.com_v3 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
